@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-26T01:02:50Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -1, +0 ],
+  "timestamp" : "2022-05-26T16:17:56Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 3 ],
+  "count_decinc" : [ -2, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +0 ]
