@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-26T01:02:50Z",
+  "timestamp" : "2022-05-26T16:17:56Z",
   "count_outdated" : 295,
   "uniques_outdated" : 153,
-  "count" : 327,
+  "count" : 326,
   "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
